# seatbelt

./: .gitignore  CONNECT.md  LICENSE  NOTICE  README.md  cheatsheet.md  demo.py  pyproject.toml  redmtz-1.3.0.sbom.json  requirements.txt
.github/workflows/: security-audit.yml
docs/: redmtz.1
redmtz/: __init__.py  cli.py  database.py  decorator.py  envelope.py  hooks.py  mcp_server.py  patterns.py  policies.py  sudo_signing.py  whitelist.py
redmtz/whitelists/: role_devops_senior.json  role_junior_admin.json  role_mlops_engineer.json
tests/: test_decorator.py  test_envelope.py  test_mcp_gates.py  test_mcp_sbb.py  test_new_patterns.py  test_patterns.py  test_rdm072_073.py  test_verify_chain.py
tests/integration/agent_compat/: RESULTS.md  test_autogen.py  test_crewai.py  test_langchain.py
