[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmtz"
version = "1.3.1"
description = "AI Governance for Python Functions and MCP Agents — Cryptographically signed audit envelopes for every decision."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Robert Benitez", email = "robert@redmtz.com" }
]
keywords = [
    "ai-governance",
    "ai-safety",
    "audit",
    "decorator",
    "cryptography",
    "llm",
    "agent",
    "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=40.0",
    "mcp>=1.0.0",
]

[project.scripts]
redmtz = "redmtz.cli:main"

[project.urls]
Homepage    = "https://redmtz.com"
Repository  = "https://github.com/redmtz/redmtz-seatbelt"
"Bug Tracker" = "https://github.com/redmtz/redmtz-seatbelt/issues"

[tool.setuptools.packages.find]
include = ["redmtz*"]

[tool.setuptools.package-data]
redmtz = ["py.typed", "whitelists/*.json"]
