[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redmtz"
version = "1.4.1"
description = "AI Governance for Python Functions and MCP Agents — Cryptographically signed audit envelopes for every decision."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Robert Benitez", email = "robert@redmtz.com" }
]
keywords = [
    "ai-governance",
    "ai-safety",
    "audit",
    "decorator",
    "cryptography",
    "llm",
    "agent",
    "compliance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=40.0",
    "mcp>=1.0.0",
]

[project.scripts]
redmtz = "redmtz.cli:main"

[project.urls]
Homepage    = "https://redmtz.com"
Repository  = "https://github.com/redmtz-t/seatbelt"
"Bug Tracker" = "https://github.com/redmtz-t/seatbelt/issues"

[tool.setuptools.packages.find]
include = ["redmtz*"]

[tool.setuptools.package-data]
redmtz = ["py.typed", "whitelists/role_devops_senior.json", "whitelists/role_mlops_engineer.json", "whitelists/role_junior_admin.json"]

[tool.setuptools.exclude-package-data]
redmtz = []
